--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       <h1 class="title">Pokedex</h1>
       <div class="search-bar">
         <input type="text" id="pokemonName" placeholder="Search Pokemon" />
-        <button id="search-button"></button>
+        <button id="search-button">Search</button>
+        <button id="random-button">Random</button>
       </div>
 
       <div id="pokemonDetails" class="pokemon-details"></div>
